[build-system]
requires = ["setuptools ~= 65.4.1", "cython ~= 0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ringbuf"
authors = [
    { name = "Elijah Shaw-Rutschman", email = "elijahr+ringbuf@gmail.com"},
]
maintainers = [
    { name = "Elijah Shaw-Rutschman", email = "elijahr+ringbuf@gmail.com"},
]
urls = { GitHub = "https://github.com/elijahr/ringbuf", PyPI = "https://pypi.org/ringbuf" }
license = { text = "MIT License" }
dynamic = ["version"]
description = "A lock-free ring buffer for Python and Cython"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
keywords = ["ring buffer", "ringbuffer", "ringbuf", "circular buffer", "lock free", "queue", "dsp", "cython"]
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "numpy >=1.0.0",
    "pytest >=7.0.0",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = ["ringbuf"]
package-dir = { "" = "." }
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "ringbuf.__version__" }

[tool.setuptools.package-data]
ringbuf = ["*.pyx", "*.pxd"]

[tool.pytest.ini_options]
testpaths = [
    "test.py",
]

# black-compatible configurations for various Python code formatters.
# Assembled from https://black.readthedocs.io/en/stable/compatible_configs.html

[tool.black]
line_length = 120
target_version = ["py36", "py37", "py38", "py39", "py310"]
experimental_string_processing = true
required_version = "22.3.0"

[tool.autopep8]
exclude = ".git,__pycache__"
max-line-length = 120
ignore = "E203,E501,W6"

[tool.isort]
profile = "black"
py_version = "all"
known_first_party = "ringbuf"
# line_length is intentionally small, to ensure each imported object gets its
# own line.
line_length = 10
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.messages_control]
disable = """missing-module-docstring,
             missing-class-docstring,
             too-few-public-methods,
             missing-function-docstring,
             import-error,
             invalid-name,
             too-many-branches,
             too-many-arguments,"""

[tool.pylint.format]
max-line-length = "120"
