[metadata]
name = ringbuf
author = Elijah Shaw-Rutschman
author_email = elijahr+ringbuf@gmail.com
url = https://github.com/elijahr/ringbuf
license = MIT
license_files = LICENSE
version = attr: ringbuf.__version__
description = A lock-free ring buffer for Python and Cython
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ring buffer, ringbuffer, ringbuf, circular buffer, lock free, queue, dsp, cython
classifiers =
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: PyPy
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Multimedia :: Sound/Audio
  License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = ringbuf
python_requires = >=3.6, <4
setup_requires =
  wheel
  # Setuptools 18.0 properly handles Cython extensions.
  setuptools>=18.0
  cython

[options.extras_require]
dev =
  numpy
  pytest




